--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    justify-content: space-evenly;
 }
 
 .title {
@@ -38,10 +39,30 @@ body{
 .level{
     display: flex;
     gap: 24px;
-    padding-bottom: 67px;
+    padding-bottom: 20px;
 }
 .level__number:hover{
     cursor: pointer;
+}
+
+.current-level{
+    border: solid 3px #004980;
+    border-radius: 12px;
+}
+
+.warning_hidden{
+    display: none;
+}
+.warning{
+    font-family: 'StratosSkyeng';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+
+    color: lightcoral;
+    text-align: center;
+    padding-bottom: 20px;
 }
 
 .button {
