--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,8 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
-body{
+body {
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -12,7 +12,7 @@ body{
     width: 480px;
     height: 459px;
 
-    background: #C2F5FF;
+    background: #c2f5ff;
     border-radius: 12px;
 
     display: flex;
@@ -25,36 +25,36 @@ body{
 .title {
     width: 208px;
     height: 96px;
-    font-family: 'StratosSkyeng';
+    font-family: "StratosSkyeng";
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
     line-height: 48px;
     text-align: center;
-    font-feature-settings: 'pnum' on, 'lnum' on;
+    font-feature-settings: "pnum" on, "lnum" on;
     color: #004980;
     padding-bottom: 48px;
 }
 
-.level{
+.level {
     display: flex;
     gap: 24px;
     padding-bottom: 20px;
 }
-.level__number:hover{
+.level__number:hover {
     cursor: pointer;
 }
 
-.current-level{
+.current-level {
     border: solid 3px #004980;
     border-radius: 12px;
 }
 
-.warning_hidden{
+.warning_hidden {
     display: none;
 }
-.warning{
-    font-family: 'StratosSkyeng';
+.warning {
+    font-family: "StratosSkyeng";
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -66,24 +66,24 @@ body{
 }
 
 .button {
-    font-family: 'StratosSkyeng';
+    font-family: "StratosSkyeng";
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
     text-align: center;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-    color: #FFFFFF;
+    font-feature-settings: "pnum" on, "lnum" on;
+    color: #ffffff;
     width: 246px;
     height: 50px;
-    background: #7AC100;
+    background: #7ac100;
     border: none;
     border-radius: 12px;
-    &:hover{
+    &:hover {
         cursor: pointer;
         background: #649e00;
     }
-    &:active{
+    &:active {
         background: #436901;
     }
 }
