--- a/style.scss
+++ b/style.scss
@@ -85,8 +85,8 @@ body {
         cursor: pointer;
         background: #649e00;
     }
-
-    &:active {
+    &:
+    active {
         background: #436901;
     }
 }
