--- a/style.scss
+++ b/style.scss
@@ -81,12 +81,12 @@ body {
     border: none;
     border-radius: 12px;
 
-    &:hover {
+    &:
+    hover {
         cursor: pointer;
         background: #649e00;
     }
-    &:
-    active {
+    &:active {
         background: #436901;
     }
 }
