--- a/style.scss
+++ b/style.scss
@@ -81,11 +81,11 @@ body {
     border: none;
     border-radius: 12px;
 
-    &:
-    hover {
+    &:hover {
         cursor: pointer;
         background: #649e00;
     }
+    
     &:active {
         background: #436901;
     }
