--- a/style.css
+++ b/style.css
@@ -3,17 +3,23 @@
   margin: 0;
 }
 
-body {
+.app {
+  background: #004980;
+  height: 100vh;
+  width: 100vw;
+}
+
+.main-container {
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container {
@@ -42,7 +48,6 @@ body {
 .title {
   width: 208px;
   height: 96px;
-  font-family: "StratosSkyeng";
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
@@ -108,5 +113,104 @@ body {
 
 .button:active {
   background: #436901;
+}
+
+.head {
+  height: 80px;
+  padding-top: 20px;
+  padding-right: 23px;
+  padding-left: 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.timer {
+  height: 80px;
+  width: 156px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.cards-field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+  width: 750px;
+}
+
+.container-for-field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 100px;
+}
+
+.time {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  color: #ffffff;
+  height: 60px;
+}
+
+.time__title {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.time__title-min {
+  position: absolute;
+  width: 28px;
+  height: 32px;
+  left: 61px;
+  top: 22px;
+}
+
+.time__title-sec {
+  position: absolute;
+  width: 26px;
+  height: 32px;
+  left: 146px;
+  top: 22px;
 }
 /*# sourceMappingURL=style.css.map */
