--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -150,10 +150,8 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-pack: center;
@@ -181,7 +179,7 @@
   font-weight: 400;
   font-size: 64px;
   line-height: 72px;
-  color: #ffffff;
+  color: #fff;
   height: 60px;
 }
 
@@ -192,7 +190,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
-  color: #ffffff;
+  color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
